# synthesis

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
Data/Shaders/: TriangleFragment.glsl  TriangleVertex.glsl
Libraries/Win32/Debug/: libEGL.lib  libGLESv2.lib
Source/: CMakeLists.txt
Source/Engine/: CMakeLists.txt  Types.hpp
Source/Engine/Graphics/: EGLManager.cpp  EGLManager.hpp  Renderer.cpp  Renderer.hpp
Source/Engine/Graphics/Math/Matrix/: Matrix.hpp  Matrix4x4.cpp  Matrix4x4.hpp
Source/Engine/Graphics/Shader/: FragmentShader.cpp  FragmentShader.hpp  Shader.cpp  Shader.hpp  VertexShader.cpp  VertexShader.hpp
Source/Engine/Graphics/Texture/: Texture.cpp  Texture.hpp
Source/Engine/Timer/: Timer.cpp  Timer.hpp
Source/Engine/Utilities/: Utils.cpp  Utils.hpp
Source/Engine/Window/: Window.cpp  Window.hpp  WindowObserver.cpp  WindowObserver.hpp
Source/Engine/Window/Win32/: Win32Types.hpp  Win32Window.cpp  Win32Window.hpp
Source/Game/: CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp
